Fixed css overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
+* {
+    box-sizing: border-box;
+}
+
 #root {
+    box-sizing: border-box;
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
@@ -31,15 +36,17 @@ p {
 .magnify-icon {
     display: flex;
     position: absolute;
-    right: calc(50dvw - 5em);
+    width: 100%;
+    height: 100%;
+    /* right: calc(50dvw - 5em); */
+    /* right: 25dvw; */
+    scale: 25%;
     z-index: 10;
     color: rgba(0, 0, 0);
     user-select: none;
     pointer-events: none;
     font-size: 5em;
     box-sizing: border-box;
-    right: 5dvw;
-    scale: 50%;
     padding: 0;
     opacity: 0.2;
     transition: opacity 0.2s ease-in-out;
@@ -52,6 +59,7 @@ p {
 }
 
 .media-wrapper {
+    position: relative;
     width: 100%;
     padding: 5px;
     margin: auto;
@@ -66,6 +74,8 @@ p {
     }
 
     .magnify-icon {
+        width: unset;
+        height: unset;
         right: 5dvw;
         scale: 50%;
     }
